gitops/app-nginx/manifests/03-workloads.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"nginx"},"name":"nginx-deployment","namespace":"nginx-app"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"nginx"}},"template":{"metadata":{"labels":{"app":"nginx"}},"spec":{"containers":[{"image":"nginx:1.25.3","name":"nginx","ports":[{"containerPort":80}]}]}}}}
    creationTimestamp: "2026-06-28T12:07:37Z"
    generation: 1
    labels:
      app: nginx
    name: nginx-deployment
    namespace: nginx-app
    resourceVersion: "54117"
    uid: ed0c88ed-9039-438b-8604-89528a364da2
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: nginx
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: nginx
      spec:
        containers:
        - image: nginx:1.25.3
          imagePullPolicy: IfNotPresent
          name: nginx
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2026-06-28T12:07:42Z"
      lastUpdateTime: "2026-06-28T12:07:42Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-06-28T12:07:37Z"
      lastUpdateTime: "2026-06-28T12:07:42Z"
      message: ReplicaSet "nginx-deployment-789bf7b8fc" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"nginx-service","namespace":"nginx-app"},"spec":{"ports":[{"port":80,"protocol":"TCP","targetPort":80}],"selector":{"app":"nginx"},"type":"ClusterIP"}}
    creationTimestamp: "2026-06-28T12:07:37Z"
    name: nginx-service
    namespace: nginx-app
    resourceVersion: "54063"
    uid: 5520a23d-8123-4bc3-848a-62bab1ab0e63
  spec:
    clusterIP: 10.97.238.34
    clusterIPs:
    - 10.97.238.34
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 80
    selector:
      app: nginx
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      cert-manager.io/cluster-issuer: selfsigned-issuer
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/cluster-issuer":"selfsigned-issuer"},"name":"nginx-ingress","namespace":"nginx-app"},"spec":{"rules":[{"host":"nginx.local","http":{"paths":[{"backend":{"service":{"name":"nginx-service","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}}],"tls":[{"hosts":["nginx.local"],"secretName":"nginx-tls-secret"}]}}
    creationTimestamp: "2026-06-28T12:07:48Z"
    generation: 1
    name: nginx-ingress
    namespace: nginx-app
    resourceVersion: "54129"
    uid: 5d4d77f1-b333-41db-a071-3579c2822d2d
  spec:
    rules:
    - host: nginx.local
      http:
        paths:
        - backend:
            service:
              name: nginx-service
              port:
                number: 80
          path: /
          pathType: Prefix
    tls:
    - hosts:
      - nginx.local
      secretName: nginx-tls-secret
  status:
    loadBalancer: {}
kind: List
metadata:
  resourceVersion: ""
